fix: 🐛 mobile website page content overflow

--- a/components/website-page/LogoCarousel/index.css
+++ b/components/website-page/LogoCarousel/index.css
@@ -4,7 +4,7 @@ body {
 .slider {
   height: 60px;
   position: relative;
-  width: 100%;
+  /* width: 70%; */
 
   display: grid;
   place-items: center;
@@ -88,7 +88,7 @@ body {
 .slider-dark {
   height: 60px;
   position: relative;
-  width: 100%;
+  /* width: 70%; */
 
   display: grid;
   place-items: center;
